# release-butler

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  repository.template.toml
.github/: release-butler.toml
.github/workflows/: ci.yml  prod.yml
listing/: privacy-policy.md  terms-of-service.md
src/: common.rs  config.rs  lib.rs  main.rs  tests_utils.rs  webhook.rs
src/events/: issues.rs  mod.rs  pulls.rs
tests/: signature_validation.rs  webhook_events.rs
tests_payload/: README.md  github_fork.json  github_invalid_issues_payload.json  github_issues.json  github_pr_opened.json  github_push.json
