[package]
name = "release-butler"
version = "0.1.3"
edition = "2021"
authors = ["Aditya Kumar <git@adityais.dev>"]

[features]
tests = ["dep:actix-http"]

[dependencies]
octocrab = "0.43"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
derive_more = { version = "2", features = ["error", "display"] }
actix-web = "4"
actix-http = { version = "3.9", optional = true }
shuttle-actix-web = "0.52"
shuttle-runtime = "0.54"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
toml = "0.8"
toml_edit = "0.22"
hmac = "0.12"
sha2 = "0.10"
jsonwebtoken = "9.3"
base16ct = "0.2"
async-trait = "0.1"
semver = "1"
